# linked-match-agent

./: .env-template  .gitignore  LICENSE  README.md  ai_agent.py  app.py  main.py  models.py  pyproject.toml  run.sh
data/: mock_profiles.xlsx
